--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+
+# Ignore downloaded model files
+/public/models/
+
+# Ignore service account credentials
+/serviceAccountKey.json
